--- a/package.json
+++ b/package.json
@@ -8,16 +8,18 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.36",
     "@types/react-dom": "^17.0.11",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
-    "typescript": "^4.5.2",
+    "typescript": "^4.5.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.15",
-    "prettier": "2.5.1"
+    "prettier": "2.5.1",
+    "react-inject-env": "^2.1.0"
   }
 }
