--- a/package.json
+++ b/package.json
@@ -32,7 +32,13 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-unused-vars": "off",
+      "@typescript-eslint/no-unused-vars": [
+        "off"
+      ]
+    }
   },
   "browserslist": {
     "production": [
